# photo_gallery_static

./: README.md  build  config.ini  models.py  pyproject.toml  requirements.txt
static/css/: style.css  unite-gallery.css
static/js/: group_months_by_year.js
templates/: index.html  layout.html  show.html
